adding why choose easybank & latest articles sections

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,3 +1,6 @@
 @forward 'nav';
 @forward 'custom-btn';
 @forward 'top-section-right.scss';
+@forward 'icon-container';
+@forward 'why-choose-card';
+@forward 'article-card';
