--- a/src/styles/globals/typography.scss
+++ b/src/styles/globals/typography.scss
@@ -6,12 +6,22 @@ h1 {
     font-size: 2rem;
 }
 
+h6{
+    font-weight: 400;
+    color: $grayish-blue;
+    font-size: 12px;
+}
+
 p{
     color: $grayish-blue;
 }
 
 .heading{
     font-size: 3rem;
+}
+
+.feature{
+    font-size: 1.5rem;
 }
 
 
