--- a/src/styles/globals/layout.scss
+++ b/src/styles/globals/layout.scss
@@ -14,3 +14,8 @@ body{
 .bg-light-grayish-blue{
     background-color: $light-grayish-blue;
 }
+
+.box-spacing{
+    padding-top: 100px!important;
+    padding-bottom: 100px!important;
+}
