adding footer and applying componentization

--- a/src/styles/components/article-card.scss
+++ b/src/styles/components/article-card.scss
@@ -1,6 +1,8 @@
 .article-card{
     width: 23%;
-    max-width: 500px;
+    max-width: 600px;
     min-width: 300px;
     margin-top: 20px;
+    margin-right: 10px;
+    border-style: none;
 }
