--- a/src/styles/globals/layout.scss
+++ b/src/styles/globals/layout.scss
@@ -19,3 +19,10 @@ body{
     padding-top: 100px!important;
     padding-bottom: 100px!important;
 }
+
+footer{
+    background-color: $dark-blue;
+    color: $white;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
